tests/whole_screen/snapshots/whole_screen__the_scroll_rail_drags_a_long_answer_back_to_its_first_retained_row.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x16 cursor 13,4 scrolled 0
|╭─ crucible v###### ──────────────────────────────────────────────────────────╮┃|
|│                                                                             │┃|
|│ CRUCIBLE                                                                    │┃|
|│ /…/workspace                                                                ││|
|│                                                                             │•|
|│ Recent sessions                                                             ││|
|│                                                                             ││|
|│ No recent sessions                                                          ││|
|│                                                                             ││|
|│ ─────────────────────────────────────────────────────────────────────────── ││|
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
