tests/whole_screen/snapshots/whole_screen__the_scroll_rail_grows_the_current_prompt_s_mark_on_the_thumb_in_a_narrow_window.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
40x16 cursor 13,4 scrolled 0
|› say it again                         •|
|                                       │|
|the quick brown fox jumps over the lazy│|
|dog. the quick brown fox jumps over the│|
|lazy dog. the quick brown fox jumps    │|
|over the lazy dog. the quick brown fox ●|
|jumps over the lazy dog. the quick     ┃|
|brown fox jumps over the lazy dog. the │|
|quick brown fox jumps over the lazy    │|
|dog. the quick brown fox jumps over the│|
|                                        |
|                         99% window left|
|╭──────────────────────────────────────╮|
|│ ›                                    │|
|╰──────────────────────────────────────╯|
|ask mode on    anthropic · claude-test-1|
