tests/whole_screen/snapshots/whole_screen__the_two_panels_of_login_reach_a_turn_without_a_provider_being_named.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 12,4 scrolled 13
|                                                                                |
|                                                                                |
|Warning: No models available. Use /login or set an API key environment variable.|
|Then use /model to select a model.                                              |
|                                                                                |
|› /login                                                                        |
|                                                                                |
|logged in to anthropic, asking claude-test-1                                    |
|                                                                                |
|› what is 2+2                                                                   |
|Two plus two is four.                                                           |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
