tests/whole_screen/snapshots/whole_screen__the_welcome_in_colour.snap
---
source: tests/whole_screen/main.rs
expression: window.picture_in_colour()
---
80x24 cursor 21,4 scrolled 0
|│ Recent sessions                                                             ││|
  1..1 fg=38;5;30
  3..17 bold fg=38;5;30
  79..79 fg=38;5;30
  80..80 fg=90
|│                                                                             ││|
  1..1 fg=38;5;30
  79..79 fg=38;5;30
  80..80 fg=90
|│ No earlier session for this workspace                                       ││|
  1..1 fg=38;5;30
  3..39 fg=90
  79..79 fg=38;5;30
  80..80 fg=90
|│                                                                             │┃|
  1..1 fg=38;5;30
  79..80 fg=38;5;30
|│ ─────────────────────────────────────────────────────────────────────────── │┃|
  1..1 fg=38;5;30
  3..77 fg=90
  79..80 fg=38;5;30
|│                                                                             │┃|
  1..1 fg=38;5;30
  79..80 fg=38;5;30
|│ Tips                                                                        │┃|
  1..1 fg=38;5;30
  3..6 bold fg=38;5;30
  79..80 fg=38;5;30
|│                                                                             │┃|
  1..1 fg=38;5;30
  79..80 fg=38;5;30
|│ · /          opens the command list                                         │┃|
  1..1 fg=38;5;30
  3..3 fg=90
  5..5 fg=38;5;30
  79..80 fg=38;5;30
|│ · \ enter    adds a line without sending                                    │┃|
  1..1 fg=38;5;30
  3..3 fg=90
  5..11 fg=38;5;30
  79..80 fg=38;5;30
|│ · shift+tab  steps the permission mode                                      │┃|
  1..1 fg=38;5;30
  3..3 fg=90
  5..13 fg=38;5;30
  79..80 fg=38;5;30
|│ · ctrl+c     clears the line typed so far                                   │┃|
  1..1 fg=38;5;30
  3..3 fg=90
  5..10 fg=38;5;30
  79..80 fg=38;5;30
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
  1..80 fg=38;5;30
|                                                                               ┃|
  80..80 fg=38;5;30
|                                                                               ┃|
  80..80 fg=38;5;30
|Warning: No models available. Use /login or set an API key environment         ┃|
  1..70 bold fg=38;5;30
  80..80 fg=38;5;30
|variable. Then use /model to select a model.                                   ┃|
  1..44 bold fg=38;5;30
  80..80 fg=38;5;30
|                                                                               ┃|
  80..80 fg=38;5;30
|                                                                                |
|                                                                                |
  1..80 fg=90
|╭──────────────────────────────────────────────────────────────────────────────╮|
  1..80 fg=90
|│ ›                                                                            │|
  1..1 fg=90
  3..3 fg=38;5;30
  80..80 fg=90
|╰──────────────────────────────────────────────────────────────────────────────╯|
  1..80 fg=90
|ask mode on (shift+tab to cycle)                                                |
  1..32 fg=90
