tests/whole_screen/snapshots/whole_screen__usage_key_40.snap
---
source: tests/whole_screen/main.rs
expression: timeless(&picture)
---
40x30 cursor 29,0 scrolled 0
|CRUCIBLE                                |
|/…/workspace                            |
|                                        |
|› say hello                             |
|                                        |
|Hello.                                  |
|                                        |
|› /usage                                |
|                                        |
|                                        |
|────────────────────────────────────────|
|                                        |
|Usage · anthropic · API key             |
|                                        |
|Session                                 |
|  Total cost     not priced             |
|  API time       Ns                     |
|  Wall time      Ns                     |
|  Lines changed  +0 −0                  |
|  Tokens         0 in · 4 out           |
|                 0 cache read           |
|                 0 cache write          |
|                                        |
|Context                                 |
|  █░░░░░░░░░░░░░░░░░░░░░░░░░   1% used  |
|                                        |
|Plan limits                             |
|  limits not reported                   |
|                                        |
|esc to close                            |
