tests/whole_screen/snapshots/whole_screen__usage_short_40.snap
---
source: tests/whole_screen/main.rs
expression: timeless(&stood)
---
40x16 cursor 15,0 scrolled 0
|────────────────────────────────────────|
|                                        |
|Usage · anthropic · API key             |
|                                        |
|Session                                 |
|  Total cost     not priced             |
|  API time       Ns                     |
|  Wall time      Ns                     |
|  Lines changed  +0 −0                  |
|  Tokens         0 in · 4 out           |
|                 0 cache read           |
|                 0 cache write          |
|                                        |
|  ↓ 5 more                              |
|                                        |
|esc to close · ↑↓ to see more           |
