tests/whole_screen/snapshots/whole_screen__warning_at_send_40_ascii.snap
---
source: tests/whole_screen/main.rs
assertion_line: 2798
expression: picture
---
40x30 cursor 29,0 scrolled 0
|CRUCIBLE                                |
|/.../workspace                          |
|                                        |
|> hello                                 |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|----------------------------------------|
|                                        |
|Google                                  |
|                                        |
|On unpaid quota, Google uses what you   |
|send and what it answers to improve its |
|products and machine learning           |
|technologies. In the EEA, Switzerland   |
|and the UK the paid terms apply instead.|
|Gemini API terms, 30 Sep 2026           |
|                                        |
|> Use it anyway                         |
|  Sends your message; this route is n...|
|                                        |
|  Go back                               |
|  Keeps your message in the prompt bo...|
|                                        |
|enter to choose - esc to go back        |
